<resources>
    <string name="app_name">Scholiki</string>
    <string name="edt_hint_email">Email</string>
    <string name="edt_hint_password">Password</string>
    <string name="btn_label_login">Login</string>

    <string name="error_msg_emptyEmail">Please enter your email</string>
    <string name="error_msg_invalidEmail">Please enter a valid email address</string>
    <string name="error_msg_emptyPassword">Please enter a password</string>
    <string name="tv_label_welcome">Welcome</string>
    <string name="tv.label.resetPassword">Reset Password</string>
    <string name="btn.label.reset">Reset</string>
    <string name="tv_label_totalStudents">Total Students</string>
    <string name="tv_label_totalClasses">Total Classes</string>
    <string name="btn_label_timeTable">Time Table</string>
    <string name="tv_label_students">Students</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_label_next">Next</string>
    <string name="edt_hint_studentName">Student Name</string>
    <string name="edt_hint_email_optional">Email (Optional)</string>
    <string name="edt_hint_poneNo_optional">Contact No (Optional)</string>
    <string name="rb_label_male">Male</string>
    <string name="rb_label_female">Female</string>
    <string name="tv_label_gender">Gender</string>
    <string name="tv_label_personalDetails">Personal Details</string>


    <string name="item_label_takePhoto" >Take Photo</string>
    <string name="item_label_chooseFromLibrary" >Choose from Library</string>
    <string name="item_label_cancel" >Cancel</string>
</resources>
