<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

    <Button
            android:text="@string/btn_label_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="@+id/edtPassword"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edtEmail"
            android:hint="@string/edt_hint_email"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtPassword"
            android:hint="@string/edt_hint_password"
            app:layout_constraintStart_toStartOf="@+id/edtEmail" app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/edtEmail"/>
</android.support.constraint.ConstraintLayout>