<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.student.add.StudentAddDetailFragment">
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:soundEffectsEnabled="true" android:fillViewport="true" android:clipToPadding="true">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content">
            <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/imageStudentProfile"
                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="2dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="10"
                    app:civ_shadow_color="#B1B1B1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/boy"
                    app:layout_constraintDimensionRatio="h,1:1"
                    app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"/>

            <Button
                    android:text="@string/btn_label_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnStudentAddDetailNext" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintVertical_bias="1.0"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrayMedium"
                    android:fontFamily="@font/fira_sans_regular"                    android:id="@+id/edtAddStudentName" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageStudentProfile"
                    android:hint="@string/edt_hint_studentName"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrayMedium"
                    android:fontFamily="@font/fira_sans_regular"                    android:id="@+id/edtStudentAddEmail"
                    app:layout_constraintEnd_toEndOf="@+id/edtAddStudentName"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/edtAddStudentName"
                    app:layout_constraintStart_toStartOf="@+id/edtAddStudentName"
                    android:hint="@string/edt_hint_email_optional"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrayMedium"
                    android:fontFamily="@font/fira_sans_regular"                    android:id="@+id/edtAddStudentPhoneNo"
                    app:layout_constraintStart_toStartOf="@+id/edtStudentAddEmail"
                    app:layout_constraintEnd_toEndOf="@+id/edtStudentAddEmail" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/edtStudentAddEmail"
                    android:hint="@string/edt_hint_poneNo_optional"/>
            <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/edtAddStudentPhoneNo"
                    app:layout_constraintEnd_toEndOf="@+id/edtAddStudentPhoneNo"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    android:checkedButton="@id/rbGenderMale" android:layout_marginTop="8dp"
                    android:id="@+id/radioGroup">
                <RadioButton
                        android:text="@string/rb_label_male"
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_height="wrap_content" android:id="@+id/rbGenderMale" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/rb_label_female"
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_height="wrap_content" android:id="@+id/rbGenderFemale"
                        android:layout_weight="1"/>
            </RadioGroup>
            <TextView
                    android:text="@string/tv_label_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:id="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/edtAddStudentPhoneNo"
                    app:layout_constraintEnd_toEndOf="@+id/edtAddStudentPhoneNo"
                    app:layout_constraintTop_toBottomOf="@+id/edtAddStudentPhoneNo" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/tv_label_personalDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:gravity="center"
                    android:fontFamily="@font/fira_sans_light"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"/>
            <ImageButton
                    android:src="@drawable/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/imageButton" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageStudentProfile"
                    app:layout_constraintStart_toEndOf="@+id/imageStudentProfile" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageStudentProfile"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>