<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeActivity">

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline5"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.61"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline6"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.48"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline7"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.86"/>
    <TextView
            android:text="@string/tv_label_totalStudents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:fontFamily="@font/fira_sans_regular"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline8"/>
    <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="35dp"
            android:fontFamily="@font/fira_sans_light"
            android:gravity="center"
            android:id="@+id/tvTotalStudents" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5" app:layout_constraintEnd_toStartOf="@+id/guideline8"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline8"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.5"/>
    <TextView
            android:text="@string/tv_label_totalClasses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_sans_regular"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/guideline8"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="35dp"
            android:fontFamily="@font/fira_sans_light"
            android:gravity="center"
            android:id="@+id/tvTotalClasses" app:layout_constraintStart_toStartOf="@+id/guideline8"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/btn_label_timeTable"
            android:layout_width="wrap_content"
            android:drawableEnd="@drawable/calendar"
            android:drawablePadding="10dp"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:id="@+id/dailySchedule" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>